--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource-variable/onest": "^5.0.4",
+    "@tabler/icons-react": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
